--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,29 @@
-# Main requirements
-python-telegram-bot==13.5
-SQLAlchemy==1.4.14
-requests==2.25.1
-toml==0.10.2
-
-# Sub-dependencies
+anyio==3.6.2
 APScheduler==3.6.3
 certifi==2020.12.5
-chardet==4.0.0
-coloredlogs==15.0
-greenlet==1.1.0
+charset-normalizer==3.1.0
+coloredlogs==15.0.1
+greenlet==2.0.2
+gunicorn==20.1.0
+h11==0.14.0
+httpcore==0.16.3
+httpx==0.23.3
 humanfriendly==9.1
 idna==2.10
+itsdangerous==2.1.2
+MarkupSafe==2.1.2
+psycopg2==2.9.6
+pyreadline==2.1
+python-telegram-bot==13.5
 pytz==2021.1
+requests==2.28.2
+rfc3986==1.5.0
 six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==1.4.14
+telegram==0.0.1
+toml==0.10.2
 tornado==6.1
+typing_extensions==4.5.0
 tzlocal==2.1
 urllib3==1.26.5
-
-# Other dependecies
-flask
-gunicorn
