--- a/config/config.toml
+++ b/config/config.toml
@@ -32,7 +32,7 @@ engine = "sqlite:///database.sqlite"
 # Telegram bot parameters
 [Telegram]
 # Your bot token goes here. Get one from https://t.me/BotFather!
-token = "5634490458:AAFlRX3xbZXdv-IC3aTyyGFVwcXN37HTycQ"
+#token = ""
 #token = "6002512838:AAGcK_c-MQL-xxaTV9jaIPuVtDnDf8Dkzt0"
 
 # Time in seconds before a conversation (thread) with no new messages expires
