--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 anyio==3.6.2
 APScheduler==3.6.3
+async-timeout==4.0.2
 certifi==2020.12.5
 charset-normalizer==3.1.0
 coloredlogs==15.0.1
+decorator==5.1.1
 greenlet==2.0.2
 gunicorn==20.1.0
 h11==0.14.0
@@ -12,7 +14,9 @@ humanfriendly==9.1
 idna==2.10
 itsdangerous==2.1.2
 MarkupSafe==2.1.2
+pbr==5.11.1
 psycopg2==2.9.6
+PyMySQL==1.0.3
 pyreadline==2.1
 python-telegram-bot==13.5
 pytz==2021.1
@@ -21,6 +25,7 @@ rfc3986==1.5.0
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.14
+stevedore==5.0.0
 telegram==0.0.1
 toml==0.10.2
 tornado==6.1
